# pod2-blob-example

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
